feat(53): vote bind to restaurant